adding admin display data (very basic)

--- a/src/view/admin/index.mustache
+++ b/src/view/admin/index.mustache
@@ -5,10 +5,8 @@
 <div id="menucontainer">
     <ul class="adminbuttons">
         <li><a class="btn btn-primary btn-large" href="{{# path }}admin/upload{{/path}}">Upload data</a></li>
+        <li><a class="btn btn-primary btn-large" href="{{# path }}admin/display{{/path}}">Display data</a></li>
     </ul>
 </div>
-
-
-
 
 {{> footer }}
