picture upload now working

--- a/src/view/admin/display.mustache
+++ b/src/view/admin/display.mustache
@@ -19,7 +19,7 @@
                 <td>{{ object_number }}</td>
                 <td>{{ title }}</td>
                 <td>{{ description }}</td>
-                <td>{{ reproduction_reference }}</td>
+                <td><img class="thumbnail" src="{{ image_url }}/{{ reproduction_reference }}"></td>
             </tr>
         {{/ items }}
     </tbody>
