basic site (for constructive criticism) working

--- a/src/view/admin/display.mustache
+++ b/src/view/admin/display.mustache
@@ -7,17 +7,15 @@
 <table class="table">
     <thead>
         <tr>
-            <th>Institution code</th>
             <th>Object number</th>
             <th>Title</th>
             <th>Description</th>
-            <th>Reproduction reference</th>
+            <th>Image</th>
         </tr>
     </thead>
     <tbody>
         {{# items }}
             <tr>
-                <td>{{ institution_code }}</td>
                 <td>{{ object_number }}</td>
                 <td>{{ title }}</td>
                 <td>{{ description }}</td>
