--- a/src/view/header.mustache
+++ b/src/view/header.mustache
@@ -6,6 +6,7 @@
     <title>{{ config.titleheader }}</title>
     <meta name="description" content="{{ config.titleheader }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Cache-control" content="public">
 
     {{! Set global params object. These are global (sorry) but RO so not so bad }}
     <script>
@@ -26,7 +27,7 @@
 </head>
 <body>
 <div id="banner">
-    <h1><i class="fa fa-ticket" aria-hidden="true"></i> SRPS Museum <i class="fa-small fa fa-circle" aria-hidden="true" style="font-size:0.7em;"></i> Collections</h1>
+    <h1><i class="fa fa-ticket" aria-hidden="true"></i> Museum of Scottish Railways <i class="fa-small fa fa-circle" aria-hidden="true" style="font-size:0.7em;"></i> Collections</h1>
 </div>
 <div class="container">
 
