--- a/src/view/header.mustache
+++ b/src/view/header.mustache
@@ -27,7 +27,9 @@
 </head>
 <body>
 <div id="banner">
-    <h1><i class="fa fa-ticket" aria-hidden="true"></i> Museum of Scottish Railways <i class="fa-small fa fa-circle" aria-hidden="true" style="font-size:0.7em;"></i> Collections</h1>
+    <div class="logo">
+        <img src="{{ config.www }}/src/assets/images/MuseumLogo.jpg" alt="Museum Logo" />
+    </div>
 </div>
 <div class="container">
 
