--- a/src/view/footer.mustache
+++ b/src/view/footer.mustache
@@ -11,6 +11,9 @@
                 Logged in as {{ system.fullname }}. <a href="{{# path }}user/logout{{/path}}">logout</a>
             {{/ system.loggedin }}
             </div>
+            <div class="col">
+                <img src="{{ config.www }}/src/assets/images/SignificantCollection.jpg" alt="Significant Collection" />
+            </div>
             <div class="col-6"></div>
             <div class="col contactblock">
                 <strong>The Scottish Railway Preservation Society</strong><br />
