--- a/src/view/site/index.mustache
+++ b/src/view/site/index.mustache
@@ -2,38 +2,50 @@
 
 {{> mainmenu }}
 
+
+
+
 <div class="container-fluid menugrid">
+    <div class="alert alert-primary index-intro">
+        <h4 class="alert-heading">Welcome to the online collections database of the Museum of Scottish Railways.</h4>
+        <p>The database is a work in progress and is not a complete list of our collection. If you
+            have something specific that you are interested in please contact <a href="mailto:museum@srps.org.uk">museum@srps.org.uk</a>.</p>
+        <p>To browse, please select one of the categories below or use the search box above for more
+            specific queries.</p>
+    </div>
+
+
     <div class="row">
         <div class="col menubox">
-            <a class="menuclick" href="{{# path }}site/menu{{/ path }}/vehicles">Vehicles</a>
+            <a class="menuclick bg_vehicles" href="{{# path }}site/menu{{/ path }}/vehicles">Vehicles</a>
         </div>
         <div class="col menubox">
-            <a class="menuclick" href="{{# path }}site/menu{{/ path }}/photographs">Photographs</a>
+            <a class="menuclick bg_photographs" href="{{# path }}site/menu{{/ path }}/photographs">Photographs</a>
         </div>
         <div class="col menubox">
-            <a class="menuclick" href="{{# path }}site/menu{{/ path }}/tools">Tools & Equipment</a>
+            <a class="menuclick bg_tools" href="{{# path }}site/menu{{/ path }}/tools">Tools & Equipment</a>
         </div>
     </div>
     <div class="row">
         <div class="col menubox">
-            <a class="menuclick" href="{{# path }}site/menu{{/ path }}/archive">Archive</a>
+            <a class="menuclick bg_archive" href="{{# path }}site/menu{{/ path }}/archive">Archive</a>
         </div>
         <div class="col menubox">
-            <a class="menuclick" href="{{# path }}site/menu{{/ path }}/signs">Signs</a>
+            <a class="menuclick bg_signs" href="{{# path }}site/menu{{/ path }}/signs">Signs</a>
         </div>
         <div class="col menubox">
-            <a class="menuclick" href="{{# path }}site/menu{{/ path }}/art">Art Publicy & Commemorative</a>
+            <a class="menuclick bg_publicity" href="{{# path }}site/menu{{/ path }}/art">Art Publicy & Commemorative</a>
         </div>
     </div>
     <div class="row">
         <div class="col menubox">
-            <a class="menuclick" href="{{# path }}site/menu{{/ path }}/costume">Costume</a>
+            <a class="menuclick bg_costume" href="{{# path }}site/menu{{/ path }}/costume">Costume</a>
         </div>
         <div class="col menubox">
-            <a class="menuclick" href="{{# path }}site/menu{{/ path }}/maps">Maps & Plans</a>
+            <a class="menuclick bg_map" href="{{# path }}site/menu{{/ path }}/maps">Maps & Plans</a>
         </div>
         <div class="col menubox">
-            <a class="menuclick" href="{{# path }}site/menu{{/ path }}/signalling">Signalling</a>
+            <a class="menuclick bg_signalling" href="{{# path }}site/menu{{/ path }}/signalling">Signalling</a>
         </div>
     </div>
 </div>
