--- a/src/view/site/pictures.mustache
+++ b/src/view/site/pictures.mustache
@@ -5,18 +5,18 @@
 <div class="container-fluid menugrid">
     <div class="row">
         <div class="col menubox">
-            <a class="menuclick" href="{{# path }}site/photographs{{/ path }}/vehicle">Vehicle Photographs</a>
+            <a class="menuclick bg_ph_vehicles" href="{{# path }}site/photographs{{/ path }}/vehicle">Vehicle Photographs</a>
         </div>
         <div class="col menubox">
-            <a class="menuclick" href="{{# path }}site/photographs{{/ path }}/station">Station Photographs</a>
+            <a class="menuclick bg_ph_stations" href="{{# path }}site/photographs{{/ path }}/station">Station Photographs</a>
         </div>
     </div>
     <div class="row">
         <div class="col menubox">
-            <a class="menuclick" href="{{# path }}site/photographs{{/ path }}/people">People Photographs</a>
+            <a class="menuclick bg_ph_people" href="{{# path }}site/photographs{{/ path }}/people">People Photographs</a>
         </div>
         <div class="col menubox">
-            <a class="menuclick" href="{{# path }}site/photographs{{/ path }}/miscellaneous">Miscellaneous Photographs</a>
+            <a class="menuclick bg_ph_miscellaneous" href="{{# path }}site/photographs{{/ path }}/miscellaneous">Miscellaneous Photographs</a>
         </div>
     </div>
 </div>
