--- a/src/view/site/single.mustache
+++ b/src/view/site/single.mustache
@@ -19,7 +19,7 @@
             <td>{{ item.description }}</td>
         </tr>
         <tr>
-            <td><img class="mt-3" src="{{ image_url }}/{{ item.reproduction_reference }}"></td>
+            <td colspan="3"><img class="mt-3" src="{{ image_url }}/{{ item.reproduction_reference }}"></td>
         </tr>
     </tbody>
 </table>
