some accessibility improvements

--- a/src/view/header.mustache
+++ b/src/view/header.mustache
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{{ config.titleheader }}</title>
+    <title>Museum of Scottish Railways Collections</title>
     <meta name="description" content="{{ config.titleheader }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Cache-control" content="public">
