--- a/src/view/site/index.mustache
+++ b/src/view/site/index.mustache
@@ -7,7 +7,7 @@
 
 <div class="container-fluid menugrid">
     <div class="alert alert-primary index-intro">
-        <h4 class="alert-heading">Welcome to the online collections database of the Museum of Scottish Railways.</h4>
+        <p class="alert-heading"><strong>Welcome to the online collections database of the Museum of Scottish Railways.</strong></p>
         <p>The database is a work in progress and is not a complete list of our collection. If you
             have something specific that you are interested in please contact <a href="mailto:museum@srps.org.uk">museum@srps.org.uk</a>.</p>
         <p>To browse, please select one of the categories below or use the search box above for more
