--- a/src/view/mainmenu.mustache
+++ b/src/view/mainmenu.mustache
@@ -19,7 +19,8 @@
         </ul>
 
         <form class="form-inline my-2 my-lg-0" action="{{# path }}site/search{{/path}}" method="post">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" name="search">
+            <label for="search" class="d-none">Search</label>
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" name="search" id="search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
